Fix carousel image size on Safari

--- a/home/css/zdbhome.scss
+++ b/home/css/zdbhome.scss
@@ -140,7 +140,11 @@ body.home {
     }
 
     .item {
-        height: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
         background-size: contain;
         background-position: center;
         background-color: white;
